--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -1,7 +1,20 @@
-nav {
+.nav {
+    display: flex;
+}
+.flex-search {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.search {
     background-color: #dff7f1;
     border-radius: 25px;
     margin: 15px;
     padding: 15px;
     color: black;
+    max-width: 350px;
+    align-items: center;
+    justify-content: center;
+    
 }
+
